# PPC-ROS2-Task

behavioral_node/: package.xml  setup.cfg  setup.py
behavioral_node/behavioral_node/: beh.py
interface/: CMakeLists.txt  package.xml
interface/action/: Navigate.action
interface/msg/: MyMsg.msg
interface/srv/: CreatePlan.srv  MissionRequest.srv
mission_node/: package.xml  setup.cfg  setup.py
mission_node/mission_node/: my_mission
planner_node/: package.xml  setup.cfg  setup.py
planner_node/planner_node/: global_planner.py  local_planner.py
ppc_behavior/: package.xml  setup.cfg  setup.py
ppc_behavior/launch/: ppc_launch.py
ppc_behavior/ppc_behavior/: beh.py  global_planner.py  local_planner.py  my_mission.py
